# mcpm

./: .gitignore  README.md  mcp_package.json  pyproject.toml  requirements.txt
mcpm/: __init__.py  __main__.py  cli.py  main.py
mcpm-registry/: README.md  package-lock.json  package.json  server.js
mcpm-registry/db/: registry.db
mcpm-registry/public/: edit-server.html  index.html  package-details.html  package-details.js  script.js  style.css
mcpm/commands/: __init__.py  configure.py  create.py  install.py  list.py  publish.py  uninstall.py
mcpm/config/: __init__.py  constants.py  manager.py
mcpm/database/: __init__.py  local_db.py
mcpm/registry/: __init__.py  api.py
mcpm/utils/: __init__.py  package_helpers.py  ui_helpers.py
